# zero

./: Cargo.toml  README.md  configuration.yml
.github/workflows/: general.yml
migrations/: 20220121032939_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  dto.rs  error.rs  lib.rs  main.rs  models.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  integration.rs
