[package]
name = "zero2prod"
author = "Gavin Chan"
email = "gavinwhchan@gmail.com"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.16", features = ["full"] }
axum = "0.4.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.89", features = ["derive"] }
config = "0.11"
tower = { version = "0.4.8", features = ["util", "timeout"] }
tower-http = { version = "0.1", features = ["add-extension", "trace"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "json",
  "migrate",
  "macros",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
